# frog

./: Cargo.toml  README  README.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/handler/: mod.rs
cli/src/handler/commands/: compile.rs  init.rs  mod.rs  run.rs  task.rs  version.rs
cli/src/parser/: args.rs
core/: Cargo.toml  README
core/src/: config.rs  eval.rs  lib.rs
core/src/eval/: builtins.rs  mod.rs
core/src/syntax/: mod.rs
core/src/syntax/compiler/: mod.rs
core/src/syntax/eval/: mod.rs
core/src/syntax/parser/: parse.rs
evaluator/: Cargo.toml
evaluator/src/: env.rs  lib.rs  object.rs
evaluator/src/builtin_modules/: math.rs
evaluator/src/builtins/: math.rs  mod.rs
evaluator/src/builtins_functions/: mod.rs
evaluator/src/builtins_modules/: math.rs  mod.rs
frog/: Cargo.toml
frog/src/: ast.rs  token.rs
frog/src/lexer/: mod.rs
frog/src/parser/: mod.rs
frog_core/src/: lib.rs
lang/: Cargo.toml  README
lang/src/: ast.rs  compiler.rs  lexer.rs  lib.rs  token.rs
lang/src/evaluator/: builtins.rs  env.rs  mod.rs  object.rs
lang/src/lexer/: mod.rs
lang/src/parser/: expect.rs  mod.rs
logger/: Cargo.toml
logger/src/: colors.rs  lib.rs
preprocessor/: Cargo.toml
preprocessor/src/: comments.rs  lib.rs  macros.rs
proposals/: preprocessor.md  syntax.md
test/: ahoj.frog  anonymous_fun.frog  main.frog  module.frog  test.frog
test/math/: main.frog
test/pub/: main.frog  module.frog
vscode-extension/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
vscode-extension/syntaxes/: froglang.tmLanguage.json
