[package]
# Main package - CLI
name = "frog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
frog_logger = { path = "../logger" }
frog_lang = { path = "../frog" }
frog_lang_evaluator = { path = "../evaluator" }